--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       >
         <!-- Ganti src dengan gambar-gambar kenangan -->
         <img
-          src="album/foto1.jpg"
+          src="foto1.jpg"
           alt="Kenangan 1"
           style="
             width: 180px;
@@ -310,7 +310,7 @@
           "
         />
         <img
-          src="album/foto2.jpg"
+          src="foto2.jpg"
           alt="Kenangan 2"
           style="
             width: 180px;
@@ -321,7 +321,7 @@
           "
         />
         <img
-          src="album/foto3.jpg"
+          src="foto3.jpg"
           alt="Kenangan 3"
           style="
             width: 180px;
@@ -332,7 +332,7 @@
           "
         />
         <img
-          src="album/foto4.jpg"
+          src="foto4.jpg"
           alt="Kenangan 4"
           style="
             width: 180px;
@@ -343,7 +343,7 @@
           "
         />
         <img
-          src="album/foto5.jpg"
+          src="foto5.jpg"
           alt="Kenangan 5"
           style="
             width: 180px;
@@ -354,7 +354,7 @@
           "
         />
         <img
-          src="album/foto6.jpg"
+          src="foto6.jpg"
           alt="Kenangan 6"
           style="
             width: 180px;
@@ -365,7 +365,7 @@
           "
         />
         <img
-          src="album/foto7.jpg"
+          src="foto7.jpg"
           alt="Kenangan 7"
           style="
             width: 180px;
@@ -376,7 +376,7 @@
           "
         />
         <img
-          src="album/foto8.jpg"
+          src="foto8.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -387,7 +387,7 @@
           "
         />
         <img
-          src="album/foto9.jpg"
+          src="foto9.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -398,7 +398,7 @@
           "
         />
         <img
-          src="album/foto10.jpg"
+          src="foto10.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -409,7 +409,7 @@
           "
         />
         <img
-          src="album/foto11.jpg"
+          src="foto11.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -420,7 +420,7 @@
           "
         />
         <img
-          src="album/foto12.jpg"
+          src="foto12.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -431,7 +431,7 @@
           "
         />
         <img
-          src="album/foto13.jpg"
+          src="foto13.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -442,7 +442,7 @@
           "
         />
         <img
-          src="album/foto14.jpg"
+          src="foto14.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -453,7 +453,7 @@
           "
         />
         <img
-          src="album/foto15.jpg"
+          src="foto15.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -464,7 +464,7 @@
           "
         />
         <img
-          src="album/foto16.jpg"
+          src="foto16.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -475,7 +475,7 @@
           "
         />
         <img
-          src="album/foto17.jpg"
+          src="foto17.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -486,7 +486,7 @@
           "
         />
         <img
-          src="album/foto18.jpg"
+          src="foto18.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -497,7 +497,7 @@
           "
         />
         <img
-          src="album/foto19.jpg"
+          src="foto19.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -508,7 +508,7 @@
           "
         />
         <img
-          src="album/foto20.jpg"
+          src="foto20.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -519,7 +519,7 @@
           "
         />
         <img
-          src="album/foto21.jpg"
+          src="foto21.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -530,7 +530,7 @@
           "
         />
         <img
-          src="album/foto22.jpg"
+          src="foto22.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -541,7 +541,7 @@
           "
         />
         <img
-          src="album/foto23.jpg"
+          src="foto23.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -552,7 +552,7 @@
           "
         />
         <img
-          src="album/foto24.jpg"
+          src="foto24.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -563,7 +563,7 @@
           "
         />
         <img
-          src="album/foto25.jpg"
+          src="foto25.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -574,7 +574,7 @@
           "
         />
         <img
-          src="album/foto26.jpg"
+          src="foto26.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -585,7 +585,7 @@
           "
         />
         <img
-          src="album/foto27.jpg"
+          src="foto27.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -596,7 +596,7 @@
           "
         />
         <img
-          src="album/foto28.jpg"
+          src="foto28.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -607,7 +607,7 @@
           "
         />
         <img
-          src="album/foto29.jpg"
+          src="foto29.jpg"
           alt="Kenangan 8"
           style="
             width: 180px;
@@ -868,3 +868,4 @@
     </script>
   </body>
 </html>
+
